Updated Mailchimp template.

--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
                                   <tr>
                                     <th class="menu-item float-right text-right" id="top-socials">
                                       <a href="*|FACEBOOK:LIKE:URL|*">
-                                        <img mc:edit="FB icon" src="http://email-images.blickdevone.com.au/iconfinder_Mail_194919.png" alt="Facebook icon." />
+                                        <img vspace="16" mc:edit="FB icon" src="http://email-images.blickdevone.com.au/iconfinder_Mail_194919.png" alt="Facebook icon." style="padding-left: 0!important;"/>
                                       </a>
                                       <a href="*|TWITTER:FULLPROFILE|*">
-                                        <img mc:edit="Twitter icon" src="https://email-images.blickdevone.com.au/iconfinder_twitter_313466.png" alt="Twitter icon."/>
+                                        <img vspace="16" mc:edit="Twitter icon" src="https://email-images.blickdevone.com.au/iconfinder_twitter_313466.png" alt="Twitter icon."/>
                                       </a>
                                       <a href="*|FORWARD|*">
-                                        <img mc:edit="Forward icon" src="https://email-images.blickdevone.com.au/iconfinder_Mail_194919.png" alt="Mail icon." />
+                                        <img vspace="16" mc:edit="Forward icon" src="https://email-images.blickdevone.com.au/iconfinder_Mail_194919.png" alt="Mail icon." />
                                       </a>
                                     </th>  
                                   </tr>
@@ -87,7 +87,7 @@
                         <table class="spacer">
                           <tbody>
                             <tr>
-                              <td height="16px" style="font-size:16px;line-height:16px;"></td>
+                              <td height="16px" style="font-size:16px;line-height:16px; margin:16px;"></td>
                             </tr>
                           </tbody>
                         </table>
@@ -100,7 +100,7 @@
                                     <tr>
                                       <th>
                                         <center data-parsed=""> 
-                                          <img mc:edit="Full width image." src="http://placehold.it/548x200" width="548" align="center" class="float-center" style="max-width:548px;" /> 
+                                          <img vspace="16" mc:edit="Full width image." src="http://placehold.it/548x200" width="548" align="center" class="float-center" style="max-width:548px;" /> 
                                         </center>
                                       </th>
                                     </tr>
@@ -153,20 +153,14 @@
                   </table>
                   <!-- full width heading end -->
                   <!-- horizontal repeater start -->
-                  <table mc:repeatable="content" mc:variant="horizontal_rule">
-                    <tr>
-                      <td> 
-                        <table class="row">
-                          <tbody>
-                            <tr>
-                              <th class="small-12 large-12 columns horizontal-rule">
-                                <hr class="horizontal-rule-line"/><!-- does this need an mc edit???-->
-                              </th>
-                            </tr>
-                          </tbody>
-                        </table>
-                      </td>
-                    </tr>
+                  <table class="row" mc:repeatable="content" mc:variant="horizontal_rule">
+                    <tbody>
+                      <tr>
+                        <th class="small-12 large-12 columns horizontal-rule">
+                          <hr class="horizontal-rule-line"/><!-- does this need an mc edit???-->
+                        </th>
+                      </tr>
+                    </tbody>
                   </table>
                   <!-- horizontal repeater end -->
                   <!-- Text with full width image start -->
@@ -176,7 +170,7 @@
                           <table class="spacer">
                             <tbody>
                               <tr>
-                                <td height="16px" style="font-size:16px;line-height:16px;"></td>
+                                <td height="16px" style="font-size:16px;line-height:16px; margin: 16px;"></td>
                               </tr>
                             </tbody>
                           </table>
@@ -189,7 +183,7 @@
                                       <tr>
                                         <th>
                                           <center data-parsed=""> 
-                                            <img mc:edit="Full width image with text." src="http://placehold.it/548x200" width="548" align="center" class="float-center" style="max-width:548px;"> 
+                                            <img vspace="16" mc:edit="Full width image with text." src="http://placehold.it/548x200" width="548" align="center" class="float-center" style="max-width:548px;"> 
                                           </center>
                                         </th>
                                       </tr>
@@ -267,7 +261,7 @@
                                       <tr>
                                         <th>
                                           <center data-parsed=""> 
-                                            <img mc:edit="Two column text with image, left." src="http://placehold.it/265x200" width="265" align="center" class="float-center" style="max-width:265px;"> 
+                                            <img vspace="16" mc:edit="Two column text with image, left." src="http://placehold.it/265x200" width="265" align="center" class="float-center" style="max-width:265px;"> 
                                           </center>
                                         </th>
                                       </tr>
@@ -304,7 +298,7 @@
                                       <tr>
                                         <th>
                                           <center data-parsed=""> 
-                                            <img mc:edit="Two column text with image, right." src="http://placehold.it/265x200" width="265" align="center" class="float-center" style="max-width:265px;"> 
+                                            <img vspace="16" mc:edit="Two column text with image, right." src="http://placehold.it/265x200" width="265" align="center" class="float-center" style="max-width:265px;"> 
                                           </center>
                                         </th>
                                       </tr>
@@ -426,7 +420,7 @@
                                       <tr>
                                         <th>
                                           <center data-parsed=""> 
-                                            <img mc:edit="Two column images, left image." src="http://placehold.it/265x200" width="265" align="center" class="float-center" style="max-width:265px;"> 
+                                            <img vspace="16" mc:edit="Two column images, left image." src="http://placehold.it/265x200" width="265" align="center" class="float-center" style="max-width:265px;"> 
                                           </center>
                                         </th>
                                       </tr>
@@ -446,7 +440,7 @@
                                     <tr>
                                       <th>
                                         <center data-parsed=""> 
-                                          <img mc:edit="Two column images, right image." src="http://placehold.it/265x200" width="265" align="center" class="float-center" style="max-width:265px;"> 
+                                          <img vspace="16" mc:edit="Two column images, right image." src="http://placehold.it/265x200" width="265" align="center" class="float-center" style="max-width:265px;"> 
                                         </center>
                                       </th>
                                     </tr>
@@ -484,7 +478,7 @@
                                       <tr>
                                         <th>
                                           <center data-parsed=""> 
-                                            <img mc:edit="Two column, text and image, left " src="http://placehold.it/265x200" width="265" align="center" class="float-center" style="max-width:265px;"> 
+                                            <img vspace="16" mc:edit="Two column, text and image, left " src="http://placehold.it/265x200" width="265" align="center" class="float-center" style="max-width:265px;"> 
                                           </center>
                                         </th>
                                       </tr>
@@ -524,7 +518,7 @@
                                       <tr>
                                         <th>
                                           <center data-parsed=""> 
-                                            <img mc:edit="Two column, text and image, right " src="http://placehold.it/265x200" width="265" align="center" class="float-center" style="max-width:265px;"> 
+                                            <img vspace="16" mc:edit="Two column, text and image, right " src="http://placehold.it/265x200" width="265" align="center" class="float-center" style="max-width:265px;"> 
                                           </center>
                                         </th>
                                       </tr>
@@ -582,7 +576,7 @@
                                       <tr>
                                         <th>
                                           <center data-parsed=""> 
-                                            <img mc:edit="Three columns image, left." src="http://placehold.it/172x100" width="172" align="center" class="float-center" style="max-width:172px;"> 
+                                            <img vspace="16" mc:edit="Three columns image, left." src="http://placehold.it/172x100" width="172" align="center" class="float-center" style="max-width:172px;"> 
                                           </center>
                                         </th>
                                       </tr>
@@ -602,7 +596,7 @@
                                     <tr>
                                       <th>
                                         <center data-parsed=""> 
-                                          <img mc:edit="Three columns image, center." src="http://placehold.it/172x100" width="172" align="center" class="float-center" style="max-width:172px;"> 
+                                          <img vspace="16" mc:edit="Three columns image, center." src="http://placehold.it/172x100" width="172" align="center" class="float-center" style="max-width:172px;"> 
                                         </center>
                                       </th>
                                     </tr>
@@ -622,7 +616,7 @@
                                       <tr>
                                         <th>
                                           <center data-parsed=""> 
-                                            <img mc:edit="Three columns image, right." src="http://placehold.it/172x100" width="172" align="center" class="float-center" style="max-width:172px;"> 
+                                            <img vspace="16" mc:edit="Three columns image, right." src="http://placehold.it/172x100" width="172" align="center" class="float-center" style="max-width:172px;"> 
                                           </center>
                                         </th>
                                       </tr>
@@ -660,7 +654,7 @@
                                       <tr>
                                         <th>
                                           <center data-parsed=""> 
-                                            <img mc:edit="Three columns image and text, left." src="http://placehold.it/172x100" width="172" align="center" class="float-center" style="max-width:172px;"> 
+                                            <img vspace="16" mc:edit="Three columns image and text, left." src="http://placehold.it/172x100" width="172" align="center" class="float-center" style="max-width:172px;"> 
                                           </center>
                                         </th>
                                       </tr>
@@ -699,7 +693,7 @@
                                       <tr>
                                         <th>
                                           <center data-parsed=""> 
-                                            <img mc:edit="Three columns image and text, center." src="http://placehold.it/172x100" width="172" align="center" class="float-center" style="max-width:172px;"> 
+                                            <img vspace="16" mc:edit="Three columns image and text, center." src="http://placehold.it/172x100" width="172" align="center" class="float-center" style="max-width:172px;"> 
                                           </center>
                                         </th>
                                       </tr>
@@ -738,7 +732,7 @@
                                       <tr>
                                         <th>
                                           <center data-parsed=""> 
-                                            <img mc:edit="Three columns image and text, right." src="http://placehold.it/172x100" width="172" align="center" class="float-center" style="max-width:172px;"> 
+                                            <img vspace="16" mc:edit="Three columns image and text, right." src="http://placehold.it/172x100" width="172" align="center" class="float-center" style="max-width:172px;"> 
                                           </center>
                                         </th>
                                       </tr>
