--- a/index.html
+++ b/index.html
@@ -81,13 +81,15 @@
                   <table mc:repeatable="content" mc:variant="full_width_image">
                     <tr>
                       <td> 
+
                         <table class="spacer">
                           <tbody>
                             <tr>
-                              <td height="16px" style="font-size:16px;line-height:16px; margin:16px;"></td>
+                              <td align="left" valign="top" width="100%" height="16" style="border-collapse:collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; mso-line-height-rule: exactly; line-height: 16px;"></td>
                             </tr>
                           </tbody>
                         </table>
+
                         <table class="row">
                           <tbody>
                             <tr>
