--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <tr>
       <td class="float-center" align="center" valign="top">
         <center>
-            <table class="spacer float-center">
-                <tbody>
-                  <tr>
-                    <td align="left" valign="top" width="100%" height="16" style="border-collapse:collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; mso-line-height-rule: exactly; line-height: 16px;"></td>
-                  </tr>
-                </tbody>
-              </table>
+          <table class="spacer float-center">
+              <tbody>
+                <tr>
+                  <td align="left" valign="top" width="100%" height="16" style="border-collapse:collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; mso-line-height-rule: exactly; line-height: 16px;"></td>
+                </tr>
+              </tbody>
+            </table>
           <table class="container header">
             <tbody>
               <tr>
@@ -719,7 +719,7 @@
                           </td>
                       </tr>
                       <tr>
-                        <th class="small-12 large-12 columns first">
+                        <th class="small-12 large-12 columns last">
                           <table class="menu ">
                             <tr>
                               <td>
@@ -741,6 +741,13 @@
               </tr>
             </tbody>
           </table><!-- closing container table -->
+          <table class="spacer float-center">
+            <tbody>
+              <tr>
+                <td align="left" valign="top" width="100%" height="16" style="border-collapse:collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; mso-line-height-rule: exactly; line-height: 16px;"></td>
+              </tr>
+            </tbody>
+          </table>
         </center>
       </td>
     </tr>
