--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>Title</title>
+  <title>Blick Email Template</title>
   <link rel="stylesheet" href="css/foundation-emails.css" />
   <link rel="stylesheet" href="css/custom.css" />
 </head>
@@ -24,7 +24,6 @@
               <tr>
                 <td><!-- opening td for main content area -->
                   <!-- top bar start -->
-
                   <table class="spacer row" style="background-color: #7ED321">
                     <tbody>
                       <tr>
@@ -32,10 +31,8 @@
                       </tr>
                     </tbody>
                   </table>
-
                   <table class="row" id="top-bar">
                     <tbody>
-      
                       <tr>
                         <th class="small-12 large-7 columns first">
                           <table class="menu ">
