Minor update to markup.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width" />
@@ -127,7 +127,7 @@
                           <table class="row">
                             <tbody>
                               <tr>
-                                <th class="small-12 large-12 columns first last">
+                                <th class="small-12 large-12 first last">
                                   <table>
                                     <tbody>
                                       <tr>
@@ -783,7 +783,7 @@
                         </td>
                       </tr>
                       <tr>
-                        <th class="small-12 large-12 columns first">
+                        <th class="small-12 large-12 columns last">
                           <table class="menu ">
                             <tr>
                               <td>
@@ -806,6 +806,14 @@
               </tr>
             </tbody>
           </table><!-- closing container table -->
+
+          <table class="spacer">
+            <tbody>
+              <tr>
+                <td align="left" valign="top" width="100%" height="16" style="border-collapse:collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; mso-line-height-rule: exactly; line-height: 16px;"></td>
+              </tr>
+            </tbody>
+          </table>
         </center>
       </td>
     </tr>
