Updated MC temaplte

--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
                                   <tr>
                                     <th class="menu-item float-right text-right" id="top-socials">
                                       <a href="*|FACEBOOK:LIKE:URL|*">
-                                        <img vspace="16" mc:edit="FB icon" src="http://email-images.blickdevone.com.au/iconfinder_Mail_194919.png" alt="Facebook icon." style="padding-left: 0!important;"/>
+                                        <img  mc:edit="FB icon" src="http://email-images.blickdevone.com.au/iconfinder_Mail_194919.png" alt="Facebook icon." style="padding-left: 0!important;"/>
                                       </a>
                                       <a href="*|TWITTER:FULLPROFILE|*">
-                                        <img vspace="16" mc:edit="Twitter icon" src="https://email-images.blickdevone.com.au/iconfinder_twitter_313466.png" alt="Twitter icon."/>
+                                        <img mc:edit="Twitter icon" src="https://email-images.blickdevone.com.au/iconfinder_twitter_313466.png" alt="Twitter icon."/>
                                       </a>
                                       <a href="*|FORWARD|*">
-                                        <img vspace="16" mc:edit="Forward icon" src="https://email-images.blickdevone.com.au/iconfinder_Mail_194919.png" alt="Mail icon." />
+                                        <img mc:edit="Forward icon" src="https://email-images.blickdevone.com.au/iconfinder_Mail_194919.png" alt="Mail icon." />
                                       </a>
                                     </th>  
                                   </tr>
@@ -99,7 +99,7 @@
                                     <tr>
                                       <th>
                                         <center data-parsed=""> 
-                                          <img vspace="16" mc:edit="Full width image." src="http://placehold.it/548x200" width="548" align="center" class="float-center" style="max-width:548px;" /> 
+                                          <img mc:edit="Full width image." src="http://placehold.it/548x200" width="548" align="center" class="float-center" style="max-width:548px;" /> 
                                         </center>
                                       </th>
                                     </tr>
@@ -182,7 +182,7 @@
                                       <tr>
                                         <th>
                                           <center data-parsed=""> 
-                                            <img vspace="16" mc:edit="Full width image with text." src="http://placehold.it/548x200" width="548" align="center" class="float-center" style="max-width:548px;"> 
+                                            <img mc:edit="Full width image with text." src="http://placehold.it/548x200" width="548" align="center" class="float-center" style="max-width:548px;"> 
                                           </center>
                                         </th>
                                       </tr>
@@ -260,7 +260,7 @@
                                       <tr>
                                         <th>
                                           <center data-parsed=""> 
-                                            <img vspace="16" mc:edit="Two column text with image, left." src="http://placehold.it/265x200" width="265" align="center" class="float-center" style="max-width:265px;"> 
+                                            <img mc:edit="Two column text with image, left." src="http://placehold.it/265x200" width="265" align="center" class="float-center" style="max-width:265px;"> 
                                           </center>
                                         </th>
                                       </tr>
@@ -297,7 +297,7 @@
                                       <tr>
                                         <th>
                                           <center data-parsed=""> 
-                                            <img vspace="16" mc:edit="Two column text with image, right." src="http://placehold.it/265x200" width="265" align="center" class="float-center" style="max-width:265px;"> 
+                                            <img mc:edit="Two column text with image, right." src="http://placehold.it/265x200" width="265" align="center" class="float-center" style="max-width:265px;"> 
                                           </center>
                                         </th>
                                       </tr>
@@ -419,7 +419,7 @@
                                       <tr>
                                         <th>
                                           <center data-parsed=""> 
-                                            <img vspace="16" mc:edit="Two column images, left image." src="http://placehold.it/265x200" width="265" align="center" class="float-center" style="max-width:265px;"> 
+                                            <img mc:edit="Two column images, left image." src="http://placehold.it/265x200" width="265" align="center" class="float-center" style="max-width:265px;"> 
                                           </center>
                                         </th>
                                       </tr>
@@ -439,7 +439,7 @@
                                     <tr>
                                       <th>
                                         <center data-parsed=""> 
-                                          <img vspace="16" mc:edit="Two column images, right image." src="http://placehold.it/265x200" width="265" align="center" class="float-center" style="max-width:265px;"> 
+                                          <img mc:edit="Two column images, right image." src="http://placehold.it/265x200" width="265" align="center" class="float-center" style="max-width:265px;"> 
                                         </center>
                                       </th>
                                     </tr>
@@ -477,7 +477,7 @@
                                       <tr>
                                         <th>
                                           <center data-parsed=""> 
-                                            <img vspace="16" mc:edit="Two column, text and image, left " src="http://placehold.it/265x200" width="265" align="center" class="float-center" style="max-width:265px;"> 
+                                            <img mc:edit="Two column, text and image, left " src="http://placehold.it/265x200" width="265" align="center" class="float-center" style="max-width:265px;"> 
                                           </center>
                                         </th>
                                       </tr>
@@ -517,7 +517,7 @@
                                       <tr>
                                         <th>
                                           <center data-parsed=""> 
-                                            <img vspace="16" mc:edit="Two column, text and image, right " src="http://placehold.it/265x200" width="265" align="center" class="float-center" style="max-width:265px;"> 
+                                            <img mc:edit="Two column, text and image, right " src="http://placehold.it/265x200" width="265" align="center" class="float-center" style="max-width:265px;"> 
                                           </center>
                                         </th>
                                       </tr>
@@ -575,7 +575,7 @@
                                       <tr>
                                         <th>
                                           <center data-parsed=""> 
-                                            <img vspace="16" mc:edit="Three columns image, left." src="http://placehold.it/172x100" width="172" align="center" class="float-center" style="max-width:172px;"> 
+                                            <img mc:edit="Three columns image, left." src="http://placehold.it/172x100" width="172" align="center" class="float-center" style="max-width:172px;"> 
                                           </center>
                                         </th>
                                       </tr>
@@ -595,7 +595,7 @@
                                     <tr>
                                       <th>
                                         <center data-parsed=""> 
-                                          <img vspace="16" mc:edit="Three columns image, center." src="http://placehold.it/172x100" width="172" align="center" class="float-center" style="max-width:172px;"> 
+                                          <img mc:edit="Three columns image, center." src="http://placehold.it/172x100" width="172" align="center" class="float-center" style="max-width:172px;"> 
                                         </center>
                                       </th>
                                     </tr>
@@ -615,7 +615,7 @@
                                       <tr>
                                         <th>
                                           <center data-parsed=""> 
-                                            <img vspace="16" mc:edit="Three columns image, right." src="http://placehold.it/172x100" width="172" align="center" class="float-center" style="max-width:172px;"> 
+                                            <img mc:edit="Three columns image, right." src="http://placehold.it/172x100" width="172" align="center" class="float-center" style="max-width:172px;"> 
                                           </center>
                                         </th>
                                       </tr>
@@ -653,7 +653,7 @@
                                       <tr>
                                         <th>
                                           <center data-parsed=""> 
-                                            <img vspace="16" mc:edit="Three columns image and text, left." src="http://placehold.it/172x100" width="172" align="center" class="float-center" style="max-width:172px;"> 
+                                            <img mc:edit="Three columns image and text, left." src="http://placehold.it/172x100" width="172" align="center" class="float-center" style="max-width:172px;"> 
                                           </center>
                                         </th>
                                       </tr>
@@ -692,7 +692,7 @@
                                       <tr>
                                         <th>
                                           <center data-parsed=""> 
-                                            <img vspace="16" mc:edit="Three columns image and text, center." src="http://placehold.it/172x100" width="172" align="center" class="float-center" style="max-width:172px;"> 
+                                            <img mc:edit="Three columns image and text, center." src="http://placehold.it/172x100" width="172" align="center" class="float-center" style="max-width:172px;"> 
                                           </center>
                                         </th>
                                       </tr>
@@ -731,7 +731,7 @@
                                       <tr>
                                         <th>
                                           <center data-parsed=""> 
-                                            <img vspace="16" mc:edit="Three columns image and text, right." src="http://placehold.it/172x100" width="172" align="center" class="float-center" style="max-width:172px;"> 
+                                            <img mc:edit="Three columns image and text, right." src="http://placehold.it/172x100" width="172" align="center" class="float-center" style="max-width:172px;"> 
                                           </center>
                                         </th>
                                       </tr>
