Updated main heading and top block border markup.

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
               <tr>
                 <td><!-- opening td for main content area -->
                   <!-- top bar start -->
-                  <table class="spacer row" style="background-color: #7ED321">
+                  <table class="spacer row" border="0" style="background-color: #7ED321">
                     <tbody>
                       <tr>
                         <td lass="small-12 large-12 columns first last" align="left" valign="top" width="100%" height="16" style="border-collapse:collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; mso-line-height-rule: exactly; line-height: 16px;"></td>
                       </tr>
                     </tbody>
                   </table>
-                  <table class="row" id="top-bar">
+                  <table class="row" border="0" id="top-bar">
                     <tbody>
                       <tr>
                         <th class="small-12 large-7 columns first">
@@ -87,7 +87,7 @@
                       <table class="row">
                         <tbody>
                           <tr>
-                            <th class="small-12 large-12 columns first last">
+                            <th class="small-12 large-12 first last">
                               <table>
                                 <tbody>
                                   <tr>
