Fixed height issue with the top green block.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                   <table class="spacer row" border="0" style="background-color: #7ED321">
                     <tbody>
                       <tr>
-                        <td lass="small-12 large-12 columns first last" align="left" valign="top" width="100%" height="16" style="border-collapse:collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; mso-line-height-rule: exactly; line-height: 16px;"></td>
+                        <td class="small-12 large-12 columns first last" align="left" valign="top" width="100%" height="2" style="border-collapse:collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; mso-line-height-rule: exactly; line-height: 16px;"></td>
                       </tr>
                     </tbody>
                   </table>
