Minor update to the CM template.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <tr>
                 <td><!-- opening td for main content area -->
                   <!-- top bar start -->
-                  <table class="spacer row" border="0" style="background-color: #7ED321">
+                  <table editable="true" class="spacer row" border="0" style="background-color: #7ED321">
                     <tbody>
                       <tr>
                         <td class="small-12 large-12 columns first last" align="left" valign="top" width="100%" height="2" style="border-collapse:collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; mso-line-height-rule: exactly; line-height: 16px;"></td>
@@ -54,10 +54,10 @@
                                   <table>
                                     <tr>
                                       <th class="menu-item text-right" id="top-socials">  
-                                        <fblike likeurl="https://www.facebook.com/blick/" style="padding-left: 0!important;">
+                                        <fblike editable="true" likeurl="https://www.facebook.com/" style="padding-left: 0!important;">
                                           <img src="http://email-images.blickdevone.com.au/iconfinder_facebook_313485.png" alt="Facebook icon." />
                                         </fblike>
-                                        <tweet tweeturl="https://twitter.com/">
+                                        <tweet editable="true" tweeturl="https://twitter.com/">
                                           <img src="https://email-images.blickdevone.com.au/iconfinder_twitter_313466.png" alt="Twitter icon."/>
                                         </tweet>
                                         <forwardtoafriend>
@@ -702,7 +702,7 @@
                     <!-- Three columns image repeater end -->
                   </repeater>
                   <!-- footer bar start -->
-                  <table class="row" id="footer-bar">
+                  <table editable="true" class="row" id="footer-bar">
                     <tbody>
                       <tr> 
                         <td> 
