Included button for full width image content repeater.

--- a/index.html
+++ b/index.html
@@ -185,6 +185,35 @@
                                   </tr>
                                 </tbody>
                               </table>
+
+
+                              <!-- button start-->
+                              <table class="button">
+                                <tbody>
+                                  <tr >
+                                    <td align="left" valign="top" width="100%" height="8" style="border-collapse:collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; mso-line-height-rule: exactly; line-height: 8px;"><!--[if gte mso 8]>&nbsp;<![endif]--></td>
+                                  </tr>
+                                  <tr>
+                                    <td>
+                                      <table>  
+                                        <tbody>
+                                          <tr>
+                                            <td mc:edit="Single column image with text, left button" >
+                                              <a href="#"  class="button-link">READ MORE</a>
+                                            </td>
+                                          </tr>
+                                        </tbody>
+                                      </table>
+                                    </td>
+                                  </tr>
+                                  <tr>
+                                    <td align="left" valign="top" width="100%" height="8" style="border-collapse:collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; mso-line-height-rule: exactly; line-height: 8px;"><!--[if gte mso 8]>&nbsp;<![endif]--></td>
+                                  </tr>
+                                </tbody>
+                              </table>
+                              <!-- button end-->
+
+
                             </th>
                           </tr>
                         </tbody>
